Fixed flush/no-collapse-* bug

--- a/src/skel-noscript.css
+++ b/src/skel-noscript.css
@@ -223,7 +223,7 @@
 		margin-left: 0 !important;
 	}
 
-	.row:not(.no-collapse):not(.flush) > * {
+	.row:not(.no-collapse):not(.no-collapse-1):not(.no-collapse-2):not(.no-collapse-3):not(.flush) > * {
 		padding: 10px 0 10px 0 !important;
 	}
 
